docs(perf): documente le banc d'import (O3) + état 29c/29d (#29)
Ajoute la section « Lancer le banc d'import (O3) » (commande + paramètres +
avertissement disque) et met à jour la section Suite (29c fait, 29d restant).